--- a/limitfloodpublish/libp2p/utility.html
+++ b/limitfloodpublish/libp2p/utility.html
@@ -199,7 +199,12 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">shortLog
+      <ul class="simple nested-toc-section">capLen
+      <li><a class="reference" href="#capLen%2Cseq%5BT%5D%2CNatural"
+    title="capLen[T](s: var seq[T]; length: Natural)">capLen[T](s: var seq[T]; length: Natural)</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">shortLog
       <li><a class="reference" href="#shortLog%2CopenArray%5Bbyte%5D"
     title="shortLog(item: openArray[byte]): string">shortLog(item: openArray[byte]): string</a></li>
   <li><a class="reference" href="#shortLog%2Cstring"
@@ -251,6 +256,18 @@ class="link-seesrc" target="_blank">Source</a>
   <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<div id="capLen,seq[T],Natural" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#capLen%2Cseq%5BT%5D%2CNatural"><span class="Identifier">capLen</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">length</span><span class="Other">:</span> <span class="Identifier">Natural</span><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/limitfloodpublish/libp2p/utility.nim#L73"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L73" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="shortLog,openArray[byte]" class="tohide">
 <dt><pre><span class="Keyword">func</span> <a href="#shortLog%2CopenArray%5Bbyte%5D"><span class="Identifier">shortLog</span></a><span class="Other">(</span><span class="Identifier">item</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -298,9 +315,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/limitfloodpublish/libp2p/utility.nim#L73"
+href="https://github.com/status-im/nim-libp2p/tree/limitfloodpublish/libp2p/utility.nim#L77"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L73" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L77" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -338,7 +355,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-13 14:02:24 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-14 08:58:19 UTC</small>
       </div>
     </div>
   </div>
